--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@heroicons/react": "^2.0.11",
     "@types/node": "18.7.21",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
@@ -21,6 +22,8 @@
     "eslint": "8.22.0",
     "eslint-config-next": "12.3.1",
     "postcss": "^8.4.16",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
     "tailwindcss": "^3.1.8",
     "typescript": "4.8.3"
   }
