--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "prettier-plugin-tailwindcss": "^0.1.13",
     "tailwindcss": "^3.1.8",
     "typescript": "4.8.3"
+  },
+  "prettier": {
+    "printWidth": 80
   }
 }
