--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/image-url": "^1.0.1",
     "next": "12.3.1",
+    "next-sanity": "^0.8.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@headlessui/react": "^1.7.2",
     "@heroicons/react": "^2.0.11",
     "@types/node": "18.7.21",
     "@types/react": "18.0.21",
