--- a/sanity/package.json
+++ b/sanity/package.json
@@ -28,7 +28,9 @@
     "react-dom": "^17.0",
     "styled-components": "^5.2.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "react-icons": "^4.4.0"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/iamdigitalminimalist/e-commerce.git"
