add Redux toolkit and addToBasket

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@ NEXT_PUBLIC_SANITY_DATASET=
 NEXT_PUBLIC_SANITY_PROJECT_ID=
 NEXT_PUBLIC_BASE_URL=
 SANITY_API_TOKEN=
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
+STRIPE_SECRET_KEY=
+STRIPE_SIGNIN_SECRET=
