--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.5",
     "@sanity/image-url": "^1.0.1",
     "next": "12.3.1",
     "next-sanity": "^0.8.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.0",
+    "react-redux": "^8.0.4"
   },
   "devDependencies": {
     "@headlessui/react": "^1.7.2",
