--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "12.3.1",
     "next-sanity": "^0.8.4",
     "react": "18.2.0",
+    "react-currency-formatter": "^1.1.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-redux": "^8.0.4"
@@ -23,6 +24,7 @@
     "@heroicons/react": "^2.0.11",
     "@types/node": "18.7.21",
     "@types/react": "18.0.21",
+    "@types/react-currency-formatter": "^1.1.4",
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.12",
     "eslint": "8.22.0",
