--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
     "@sanity/image-url": "^1.0.1",
+    "@stripe/stripe-js": "^1.38.1",
     "next": "12.3.1",
     "next-sanity": "^0.8.4",
     "react": "18.2.0",
     "react-currency-formatter": "^1.1.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
-    "react-redux": "^8.0.4"
+    "react-redux": "^8.0.4",
+    "stripe": "^10.12.0-beta.1"
   },
   "devDependencies": {
     "@headlessui/react": "^1.7.2",
