--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
+    "react-responsive": "^9.0.0",
     "tailwindcss": "^3.1.8",
     "typescript": "4.8.3"
   },
