add auth via google account

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,5 @@ SANITY_API_TOKEN=
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
 STRIPE_SECRET_KEY=
 STRIPE_SIGNIN_SECRET=
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
