--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@sanity/image-url": "^1.0.1",
     "@stripe/stripe-js": "^1.38.1",
     "next": "12.3.1",
+    "next-auth": "^4.12.0",
     "next-sanity": "^0.8.4",
     "react": "18.2.0",
     "react-currency-formatter": "^1.1.0",
