--- a/sanity/package.json
+++ b/sanity/package.json
@@ -22,6 +22,7 @@
     "@sanity/eslint-config-studio": "^2.0.0",
     "@sanity/vision": "^2.33.3",
     "eslint": "^8.6.0",
+    "next-auth-sanity": "^1.4.4",
     "prop-types": "^15.7",
     "react": "^17.0",
     "react-barcode": "^1.3.2",
